Implemented system for passing hash value to another fragment
- Added a variable in MainActivity for storing the previous hash value (lastHash)
- Added getters and setters in MainActivity for lastHash
- Miscellaneous Commenting

--- a/QRCity/app/src/main/res/navigation/nav_graph.xml
+++ b/QRCity/app/src/main/res/navigation/nav_graph.xml
@@ -25,6 +25,9 @@
         <action
             android:id="@+id/action_CodeScannerFragment_to_FirstFragment"
             app:destination="@id/FirstFragment" />
+        <action
+            android:id="@+id/action_CodeScannerFragment_to_scannable_code"
+            app:destination="@id/scannable_code" />
     </fragment>
     <fragment
         android:id="@+id/scannable_code"
@@ -34,6 +37,9 @@
         <action
             android:id="@+id/action_scannable_code_to_camera_fragment"
             app:destination="@id/camera_fragment" />
+        <action
+            android:id="@+id/action_scannable_code_to_CodeScannerFragment"
+            app:destination="@id/CodeScannerFragment" />
     </fragment>
     <fragment
         android:id="@+id/camera_fragment"
