--- a/QRCity/app/src/main/res/layout/scannable_code_fragment.xml
+++ b/QRCity/app/src/main/res/layout/scannable_code_fragment.xml
@@ -52,7 +52,7 @@
                     android:textSize="20sp" />
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/score_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -66,6 +66,7 @@
                     android:layout_weight="1">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/input_cmt"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -95,7 +96,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:backgroundTint="@color/black"
+                    android:backgroundTint="@color/grey"
                     android:text="Take photo to add to record" />
 
                 <LinearLayout
@@ -121,7 +122,7 @@
                         android:layout_weight="1" />
 
                     <Button
-                        android:id="@+id/button2"
+                        android:id="@+id/next_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
