--- a/QRCity/app/src/main/res/layout/user_profile.xml
+++ b/QRCity/app/src/main/res/layout/user_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Useractivity">
+    tools:context=".Userprofileactivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
