--- a/QRCity/app/src/main/res/values/colors.xml
+++ b/QRCity/app/src/main/res/values/colors.xml
@@ -8,5 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#808080</color>
-
+    <color name="gray">#D3D3D3</color>
 </resources>
