Updated List view - Need to address navigation error
When navigating to the list view fragment the new layout is not being displayed

--- a/QRCity/app/src/main/res/navigation/nav_graph.xml
+++ b/QRCity/app/src/main/res/navigation/nav_graph.xml
@@ -6,6 +6,15 @@
     app:startDestination="@id/FirstFragment">
 
     <fragment
+        android:id="@+id/CodeListview"
+        android:name="com.example.qrcity.FirstFragment"
+        android:label="@string/first_fragment_label"
+        tools:layout="@layout/code_listview_layout">
+        <action
+            android:id="@+id/action_CodeListview_to_FirstFragment"
+            app:destination="@id/FirstFragment" />
+    </fragment>
+    <fragment
         android:id="@+id/FirstFragment"
         android:name="com.example.qrcity.FirstFragment"
         android:label="@string/first_fragment_label"
@@ -14,8 +23,8 @@
             android:id="@+id/action_FirstFragment_to_CodeScannerFragment"
             app:destination="@id/CodeScannerFragment" />
         <action
-            android:id="@+id/action_FirstFragment_to_scannable_code"
-            app:destination="@id/scannable_code" />
+            android:id="@+id/action_FirstFragment_to_CodeListview"
+            app:destination="@id/CodeListview" />
     </fragment>
     <fragment
         android:id="@+id/CodeScannerFragment"
@@ -45,5 +54,9 @@
         android:id="@+id/success_scan_fragment"
         android:name="com.example.qrcity.success_scan_fragment"
         android:label="sucess_scan_fragment"
-        tools:layout="@layout/sucess_scan_fragment" />
+        tools:layout="@layout/sucess_scan_fragment" >
+        <action
+            android:id="@+id/action_success_scan_fragment_to_FirstFragment"
+            app:destination="@id/FirstFragment" />
+    </fragment>
 </navigation>
