--- a/QRCity/app/src/main/res/layout/activity_main.xml
+++ b/QRCity/app/src/main/res/layout/activity_main.xml
@@ -114,7 +114,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/fab"
-        android:src="@drawable/ic_scan_photo"
+        android:src="@drawable/ic_scan"
         app:layout_anchor="@id/BottomNav"
         tools:ignore="MissingConstraints" />
 
