--- a/QRCity/app/src/main/res/layout/nav_header.xml
+++ b/QRCity/app/src/main/res/layout/nav_header.xml
@@ -10,7 +10,8 @@
         android:layout_height="50dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
-        android:src="@drawable/addphoto" />
+        android:src="@drawable/addphoto"
+        tools:ignore="MissingClass" />
 
     <TextView
         android:id="@+id/name"
