--- a/QRCity/app/src/main/res/layout/code_content_layout.xml
+++ b/QRCity/app/src/main/res/layout/code_content_layout.xml
@@ -1,62 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="horizontal">
-
+    android:layout_height="match_parent">
     <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:orientation="vertical">
+        android:layout_width="match_parent"
+        android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/location_image"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/error_image" />
-
-        <Button
-            android:id="@+id/button_delete_code"
-            android:layout_width="wrap_content"
+        <LinearLayout
             android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:textSize="15sp"
-            android:text="Delete code">
-        </Button>
+            android:layout_width="wrap_content"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/location_image"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/error_image" />
+
+            <Button
+                android:id="@+id/button_delete_code"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:textSize="15sp"
+                android:text="Delete code">
+            </Button>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_height="wrap_content"
+            android:layout_width="0sp"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:textSize="25sp"
+                android:layout_marginLeft="20dp"
+                android:text="Placeholder Name">
+            </TextView>
+
+            <TextView
+                android:id="@+id/score"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:textSize="25sp"
+                android:layout_marginLeft="20dp"
+                android:text="00000">
+            </TextView>
+
+        </LinearLayout>
+
 
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_height="wrap_content"
-        android:layout_width="0sp"
-        android:layout_weight="1"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:textSize="25sp"
-            android:layout_marginLeft="20dp"
-            android:text="Placeholder Name">
-        </TextView>
-
-        <TextView
-            android:id="@+id/score"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:textSize="25sp"
-            android:layout_marginLeft="20dp"
-            android:text="00000">
-        </TextView>
-
-    </LinearLayout>
-
-
-</LinearLayout>
-
+</FrameLayout>
 
