--- a/QRCity/app/src/main/res/navigation/nav_graph.xml
+++ b/QRCity/app/src/main/res/navigation/nav_graph.xml
@@ -6,15 +6,6 @@
     app:startDestination="@id/FirstFragment">
 
     <fragment
-        android:id="@+id/CodeListview"
-        android:name="com.example.qrcity.FirstFragment"
-        android:label="@string/first_fragment_label"
-        tools:layout="@layout/code_listview_layout">
-        <action
-            android:id="@+id/action_CodeListview_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
-    </fragment>
-    <fragment
         android:id="@+id/FirstFragment"
         android:name="com.example.qrcity.FirstFragment"
         android:label="@string/first_fragment_label"
@@ -53,10 +44,19 @@
     <fragment
         android:id="@+id/success_scan_fragment"
         android:name="com.example.qrcity.success_scan_fragment"
-        android:label="sucess_scan_fragment"
+        android:label="success_scan_fragment"
         tools:layout="@layout/sucess_scan_fragment" >
         <action
             android:id="@+id/action_success_scan_fragment_to_FirstFragment"
+            app:destination="@id/FirstFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/CodeListview"
+        android:name="com.example.qrcity.ListViewFragment"
+        android:label="code_listview_layout"
+        tools:layout="@layout/code_listview_layout">
+        <action
+            android:id="@+id/action_CodeListview_to_FirstFragment"
             app:destination="@id/FirstFragment" />
     </fragment>
 </navigation>
