--- a/QRCity/app/src/main/res/layout/fragment_first.xml
+++ b/QRCity/app/src/main/res/layout/fragment_first.xml
@@ -47,7 +47,7 @@
                     android:id="@+id/textView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="230dp"
+                    android:layout_marginBottom="196dp"
                     android:text="Hello, Username"
                     android:textColor="#000"
                     android:textSize="28dp"
@@ -62,9 +62,10 @@
                     android:layout_height="97dp"
                     android:layout_marginStart="152dp"
                     android:layout_marginEnd="152dp"
-                    android:layout_marginBottom="122dp"
+                    android:layout_marginBottom="100dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:srcCompat="@drawable/addphoto" />
 
