--- a/QRCity/app/src/main/res/layout/fragment_first.xml
+++ b/QRCity/app/src/main/res/layout/fragment_first.xml
@@ -28,7 +28,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
                     android:background="@color/white"
-                    app:title="Home"
+                    android:layout_alignParentRight="true"
                     app:navigationIcon="@drawable/baseline_menu_24"/>
             </com.google.android.material.appbar.AppBarLayout>
 
