Changed ListvewFragment to an Activity for the current user
- Changed the structure of the class from a fragment to an Activity
- Added The new Activity to the Manifest
- I plan to make another class for viewing a list of QR codes by other users as it will have different functionality
- Scanned codes do not appear in the list due to Database issues (Users are not stored on the database?)

--- a/QRCity/app/src/main/res/navigation/nav_graph.xml
+++ b/QRCity/app/src/main/res/navigation/nav_graph.xml
@@ -52,7 +52,7 @@
     </fragment>
     <fragment
         android:id="@+id/CodeListview"
-        android:name="com.example.qrcity.ListViewFragment"
+        android:name="com.example.qrcity.ThisUserListViewActivity"
         android:label="Your scanned codes"
         tools:layout="@layout/code_listview_layout">
         <action
