Removed items from Home Screen

--- a/QRCity/app/src/main/res/layout/fragment_first.xml
+++ b/QRCity/app/src/main/res/layout/fragment_first.xml
@@ -47,22 +47,23 @@
                     android:id="@+id/textView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="208dp"
+                    android:layout_marginStart="400dp"
+                    android:layout_marginBottom="20dp"
                     android:text="Hello, Username"
                     android:textColor="#000"
                     android:textSize="28dp"
                     android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toTopOf="@+id/imageView"
+                    app:layout_constraintEnd_toStartOf="@+id/frameLayout"
                     app:layout_constraintStart_toStartOf="parent" />
 
                 <ImageView
                     android:id="@+id/imageView"
                     android:layout_width="107dp"
                     android:layout_height="97dp"
-                    android:layout_marginStart="152dp"
-                    android:layout_marginEnd="152dp"
-                    android:layout_marginBottom="100dp"
+                    android:layout_marginStart="148dp"
+                    android:layout_marginEnd="148dp"
+                    android:layout_marginBottom="120dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
