Finished* Code List view
- Renamed class again to CodeListview
- Created an alternate code content layout that just has the delete button removed
- Now takes as input a target user from a bundle with key "userID"
- Will display different layouts depending on if the current user is the same as the target user or not
- Still waiting on database fix

--- a/QRCity/app/src/main/res/navigation/nav_graph.xml
+++ b/QRCity/app/src/main/res/navigation/nav_graph.xml
@@ -52,9 +52,9 @@
     </fragment>
     <fragment
         android:id="@+id/CodeListview"
-        android:name="com.example.qrcity.ThisUserListViewActivity"
+        android:name="com.example.qrcity.CodeListview"
         android:label="Your scanned codes"
-        tools:layout="@layout/code_listview_layout">
+        tools:layout="@layout/code_listview">
         <action
             android:id="@+id/action_CodeListview_to_FirstFragment"
             app:destination="@id/FirstFragment" />
