--- a/QRCity/app/src/main/res/layout/code_content_1.xml
+++ b/QRCity/app/src/main/res/layout/code_content_1.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:orientation="horizontal">
@@ -33,8 +32,8 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_height="wrap_content"
             android:layout_width="0sp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:orientation="vertical">
 
@@ -42,21 +41,28 @@
                 android:id="@+id/name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:textSize="25sp"
                 android:layout_marginLeft="20dp"
-                android:text="Placeholder Name">
-            </TextView>
+                android:padding="5dp"
+                android:text="Placeholder Name"
+                android:textSize="25sp"></TextView>
 
             <TextView
                 android:id="@+id/score"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:textSize="25sp"
                 android:layout_marginLeft="20dp"
-                android:text="00000">
-            </TextView>
+                android:padding="5dp"
+                android:text="00000"
+                android:textSize="25sp"></TextView>
+
+            <TextView
+                android:id="@+id/comment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:padding="5dp"
+                android:text="Comment"
+                android:textSize="25sp"></TextView>
 
         </LinearLayout>
 
