--- a/QRCity/app/src/main/res/layout/code_listview.xml
+++ b/QRCity/app/src/main/res/layout/code_listview.xml
@@ -2,9 +2,10 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/CodeListview1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ThisUserListViewActivity">
+    tools:context=".CodeListview">
 
     <LinearLayout
         android:layout_width="match_parent"
