--- a/QRCity/app/src/main/res/layout/fragment_first.xml
+++ b/QRCity/app/src/main/res/layout/fragment_first.xml
@@ -47,14 +47,13 @@
                     android:id="@+id/textView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="400dp"
                     android:layout_marginBottom="20dp"
                     android:text="Hello, Username"
                     android:textColor="#000"
                     android:textSize="28dp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toTopOf="@+id/imageView"
-                    app:layout_constraintEnd_toStartOf="@+id/frameLayout"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
 
                 <ImageView
