--- a/QRCity/app/src/main/res/layout/code_listview.xml
+++ b/QRCity/app/src/main/res/layout/code_listview.xml
@@ -5,7 +5,7 @@
     android:id="@+id/CodeListview1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CodeListview">
+    tools:context=".qr.CodeListview">
 
     <LinearLayout
         android:layout_width="match_parent"
