--- a/QRCity/app/src/main/res/layout/scannable_code_fragment.xml
+++ b/QRCity/app/src/main/res/layout/scannable_code_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Scannable_code_fragment">
+    tools:context=".qr.Scannable_code_fragment">
 
     <LinearLayout
         android:layout_width="match_parent"
