--- a/QRCity/app/src/main/res/layout/sucess_scan_fragment.xml
+++ b/QRCity/app/src/main/res/layout/sucess_scan_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".success_scan_fragment">
+    tools:context=".qr.success_scan_fragment">
 
     <LinearLayout
         android:layout_width="match_parent"
