--- a/QRCity/app/src/main/res/navigation/nav_graph.xml
+++ b/QRCity/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/FirstFragment"
-        android:name="com.example.qrcity.FirstFragment"
+        android:name="com.example.qrcity.qr.FirstFragment"
         android:label="Home"
         tools:layout="@layout/fragment_first">
         <action
@@ -19,7 +19,7 @@
     </fragment>
     <fragment
         android:id="@+id/CodeScannerFragment"
-        android:name="com.example.qrcity.QRScanner"
+        android:name="com.example.qrcity.qr.QRScanner"
         android:label="@string/fragment_code_scanner_label"
         tools:layout="@layout/fragment_code_scanner">
         <action
@@ -31,7 +31,7 @@
     </fragment>
     <fragment
         android:id="@+id/scannable_code"
-        android:name="com.example.qrcity.Scannable_code_fragment"
+        android:name="com.example.qrcity.qr.Scannable_code_fragment"
         android:label="New Code"
         tools:layout="@layout/scannable_code_fragment" >
         <action
@@ -43,7 +43,7 @@
     </fragment>
     <fragment
         android:id="@+id/success_scan_fragment"
-        android:name="com.example.qrcity.success_scan_fragment"
+        android:name="com.example.qrcity.qr.success_scan_fragment"
         android:label="Finished adding code"
         tools:layout="@layout/sucess_scan_fragment" >
         <action
@@ -52,7 +52,7 @@
     </fragment>
     <fragment
         android:id="@+id/CodeListview"
-        android:name="com.example.qrcity.CodeListview"
+        android:name="com.example.qrcity.qr.CodeListview"
         android:label="Your scanned codes"
         tools:layout="@layout/code_listview">
         <action
