Changes on Leaderboard Fragment

--- a/QRCity/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/QRCity/app/src/main/res/layout/fragment_leaderboard.xml
@@ -11,23 +11,41 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
-        <TextView
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appbarLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="128dp"
-            android:gravity="center"
-            android:text="Leaderboards"
-            android:textSize="18sp" />
+            android:layout_height="wrap_content">
+
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/topAppbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="@color/white"
+                android:layout_alignParentRight="true"
+                app:navigationIcon="@drawable/baseline_menu_24"/>
+        </com.google.android.material.appbar.AppBarLayout>
     </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dp"
+        android:gravity="center"
+        android:text="Leaderboards"
+        android:textSize="18sp" />
 
     <!-- this the navigation view which draws and shows the navigation drawer -->
     <!-- include the menu created in the menu folder -->
     <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigation_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        android:minHeight="?attr/actionBarSize"
         app:menu="@menu/leaderboard_items" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
