Made changes to both new fragments

--- a/QRCity/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/QRCity/app/src/main/res/layout/fragment_leaderboard.xml
@@ -25,6 +25,7 @@
                 android:layout_height="?attr/actionBarSize"
                 android:background="@color/white"
                 android:layout_alignParentRight="true"
+                app:title="@string/leaderboard"
                 app:navigationIcon="@drawable/baseline_menu_24"/>
         </com.google.android.material.appbar.AppBarLayout>
     </LinearLayout>
