--- a/QRCity/app/src/main/res/layout/fragment_first.xml
+++ b/QRCity/app/src/main/res/layout/fragment_first.xml
@@ -29,6 +29,7 @@
                     android:layout_height="?attr/actionBarSize"
                     android:background="@color/white"
                     android:layout_alignParentRight="true"
+                    app:title="@string/app_name"
                     app:navigationIcon="@drawable/baseline_menu_24"/>
             </com.google.android.material.appbar.AppBarLayout>
 
