--- a/QRCity/app/src/main/res/layout/fragment_search_player.xml
+++ b/QRCity/app/src/main/res/layout/fragment_search_player.xml
@@ -11,15 +11,30 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
-        <TextView
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appbarLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="128dp"
-            android:gravity="center"
-            android:text="Search"
-            android:textSize="18sp" />
+            android:layout_height="wrap_content">
+
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/topAppbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="@color/white"
+                android:layout_alignParentRight="true"
+                app:title="@string/search"/>
+        </com.google.android.material.appbar.AppBarLayout>
     </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dp"
+        android:gravity="center"
+        android:text="Search"
+        android:textSize="18sp" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
