--- a/QRCity/app/src/main/res/layout/fragment_first.xml
+++ b/QRCity/app/src/main/res/layout/fragment_first.xml
@@ -7,6 +7,12 @@
     android:layout_height="match_parent"
     tools:context=".qr.MainActivity">
 
+
+    <include
+        layout="@layout/nav_header"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+    
     <androidx.drawerlayout.widget.DrawerLayout
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
