--- a/QRCity/app/src/main/res/layout/fragment_info.xml
+++ b/QRCity/app/src/main/res/layout/fragment_info.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".InfoFragment">
+    tools:context=".home.InfoFragment">
 
     <TextView
         android:id="@+id/textView6"
