--- a/QRCity/app/src/main/res/layout/user_profile.xml
+++ b/QRCity/app/src/main/res/layout/user_profile.xml
@@ -118,7 +118,7 @@
         android:layout_height="49dp"
         android:layout_marginStart="16dp"
         android:onClick="CodeList"
-        android:text="Code_List"
+        android:text="CodeList"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button_Del"
         app:layout_constraintHorizontal_bias="0.257"
