--- a/QRCity/app/src/main/res/navigation/nav_graph.xml
+++ b/QRCity/app/src/main/res/navigation/nav_graph.xml
@@ -22,6 +22,12 @@
         <action
             android:id="@+id/action_FirstFragment_to_searchPlayerFragment"
             app:destination="@id/searchPlayerFragment" />
+        <action
+            android:id="@+id/action_FirstFragment_to_infoFragment"
+            app:destination="@id/infoFragment" />
+        <action
+            android:id="@+id/action_FirstFragment_to_accountFragment"
+            app:destination="@id/accountFragment" />
     </fragment>
     <fragment
         android:id="@+id/CodeScannerFragment"
@@ -79,6 +85,24 @@
         android:label="SearchPlayerFragment" >
         <action
             android:id="@+id/action_searchPlayerFragment_to_FirstFragment"
+            app:destination="@id/FirstFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/accountFragment"
+        android:name="com.example.qrcity.home.AccountFragment"
+        android:label="fragment_account"
+        tools:layout="@layout/fragment_account" >
+        <action
+            android:id="@+id/action_accountFragment_to_FirstFragment"
+            app:destination="@id/FirstFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/infoFragment"
+        android:name="com.example.qrcity.home.InfoFragment"
+        android:label="fragment_info"
+        tools:layout="@layout/fragment_info" >
+        <action
+            android:id="@+id/action_infoFragment_to_FirstFragment"
             app:destination="@id/FirstFragment" />
     </fragment>
 </navigation>
