--- a/QRCity/app/src/main/res/layout/code_listview.xml
+++ b/QRCity/app/src/main/res/layout/code_listview.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:padding="5dp"
             android:textSize="25sp"
-            android:text="Your scanned codes" />
+            android:text="[User]'s scanned codes" />
 
         <ListView
             android:id="@+id/code_list"
