--- a/QRCity/app/src/main/res/layout/scannable_code_fragment.xml
+++ b/QRCity/app/src/main/res/layout/scannable_code_fragment.xml
@@ -107,7 +107,7 @@
                     android:weightSum="3">
 
                     <Button
-                        android:id="@+id/button3"
+                        android:id="@+id/cancel_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
