--- a/QRCity/app/src/main/res/layout/user_profile.xml
+++ b/QRCity/app/src/main/res/layout/user_profile.xml
@@ -23,6 +23,7 @@
         android:layout_width="97dp"
         android:layout_height="43dp"
         android:text="UserName"
+        android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/UserName"
@@ -37,6 +38,7 @@
         android:layout_height="43dp"
         android:layout_marginEnd="64dp"
         android:text="UserName"
+        android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,6 +50,7 @@
         android:layout_width="97dp"
         android:layout_height="43dp"
         android:text="Contact_info"
+        android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/UserName"
@@ -62,6 +65,7 @@
         android:layout_height="43dp"
         android:layout_marginEnd="64dp"
         android:text="Contact_info"
+        android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -74,6 +78,7 @@
         android:layout_width="97dp"
         android:layout_height="43dp"
         android:text="User_Score"
+        android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/UserName"
@@ -88,6 +93,7 @@
         android:layout_height="43dp"
         android:layout_marginEnd="64dp"
         android:text="User_Score"
+        android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
