--- a/QRCity/app/src/main/res/layout/usersearchfragment.xml
+++ b/QRCity/app/src/main/res/layout/usersearchfragment.xml
@@ -11,6 +11,7 @@
         android:text="Name"
         android:textAlignment="center"
         android:textSize="24sp"
+        android:textColor="@color/black"
         android:textStyle="bold" />
 
     <TextView
@@ -19,6 +20,7 @@
         android:layout_height="wrap_content"
         android:text="Score:"
         android:textAlignment="center"
+        android:textColor="@color/black"
         android:textSize="16sp" />
 
     <TextView
@@ -27,5 +29,6 @@
         android:layout_height="wrap_content"
         android:text="Number Codes:"
         android:textAlignment="center"
+        android:textColor="@color/black"
         android:textSize="16sp" />
 </LinearLayout>
